messing with Google fonts. TODO: make sure this doesn't cause overflow on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -32,7 +32,7 @@ nav {
 .nav-item {
 	display: block;
 	float: right;
-	font-size: 20px;
+	font-size: 25px;
 	margin: 0px;
 	padding-left: 10px;
 	padding-right: 10px;
@@ -40,8 +40,10 @@ nav {
 
 nav a {
 	color: #efebf7;
-	font-weight: normal;
-	font-family: 'Lora', serif;
+	/*font-weight: normal;*/
+	/*font-family: 'Lora', serif;*/
+	font-family: 'Shrikhand', sans-serif;
+	font-weight: bolder;
 	text-shadow: 1px 1px black;
 }
 
@@ -53,8 +55,10 @@ nav a:hover {
 }
 
 h1, h2 {
-	font-family: 'Lora', serif;
-	font-size: 36px;
+	/*font-family: 'Lora', serif;*/
+	font-family: 'Shrikhand', sans-serif;
+	font-weight: bolder;
+	font-size: 40px;
 	font-weight: lighter;
 	margin-bottom: 10px;
 	margin-top: 10px;
@@ -83,7 +87,7 @@ mark {
 emphasis {
 	/*text-decoration: underline #888;*/
 	/*border-bottom: 2px solid #888;*/
-	text-shadow: 1px 1px #D1CCDC;
+	text-shadow: 2px 2px #D1CCDC;
 	font-weight: bold;
 }
 
